--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,12 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
 * {
-    color: white;
-    font-family: 'Inter', sans-serif;
-    
-    font-smooth: always;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  color: white;
+  font-family: "Inter", sans-serif;
+
+  font-smooth: always;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  overflow: hidden;
+}
+
+.main-bg {
+  background: linear-gradient(to bottom, #0b0b0b 0%, hsl(0, 0%, 0%) 100%);
+}
+
+:root {
+  --bg-main: #0b0b0b;
+  --text-main: white;
+  --text-branding: #ee31ee;
 }
